--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ h2{
     <nav id="menu">
             <h1> menu Principal </h1>
             <ul>
-                <li><a href="avaliacao1.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="imagens.html">imagens</a></li>
                 <li><a href="contato.html">contato</a></li>
                
@@ -125,7 +125,7 @@ h2{
             </nav>
             </header>
             <figure class="foto-legenda">
-                    <img src="img/aranha.jpg">
+                    <img src="aranha.jpg">
                     
                 </figure>
 </div>
